<resources>
    <string name="app_name">Hitung BMI</string>
    <string name="teks_bmi">BMI, atau Body Mass Index merupakan cara untuk menentukan apakah berat badanmu ideal atau tidak. Cobalah sekarang!</string>
    <string name="teks_berat">Berat Badan (Kg)</string>
    <string name="teks_tinggi">Tinggi Badan (cm)</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="jk_pria">Pria</string>
    <string name="jk_wanita">Wanita</string>
    <string name="hitung">Hitung</string>
    <string name="bmi_x">BMI: %1$.2f</string>
    <string name="kurus">Kurus</string>
    <string name="ideal">Ideal</string>
    <string name="gemuk">Gemuk</string>
    <string name="kategori_x">Kategori: %1$s</string>
    <string name="berat_invalid">Berat tidak boleh kosong.</string>
    <string name="tinggi_invalid">Tinggi tidak boleh kosong.</string>
    <string name="gender_invalid">Pilih jenis kelamin.</string>
    <string name="Judul_kurus">Mengatasi Kekurusan</string>
    <string name="Judul_ideal">Menjaga Tetap Ideal</string>
    <string name="Judul_gemuk">Mengatasi Kegemukan</string>
    <string name="saran_kurus">>Cobalah untuk makan porsi besar, seperti burger
berukuran raksasa ini.</string>
    <string name="saran_ideal">Pertahankan gaya hidupmu! Tapi jangan kebanyakan
gaya karena itu berbahaya.</string>
    <string name="saran_gemuk">Cobalah untuk olahraga lari. Kemanapun boleh,
asal tidak lari dari kehidupan.</string>
    <string name="lihat_saran">Lihat Saran</string>
    <dimen name="horizontal_margin">16dp</dimen>
</resources>